--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -31,7 +31,7 @@
       "head": "experience",
       "paerte_code": "As a UI/UX Designer who focuses on creating application prototype designs for further development. By understanding user needs, I strive to create simple and effective designs. The tool I use is Figma.",
       "balaroa_head": "Balaroa Sub-District",
-      "balaroa": "Create an application to create automatic letters, so that employees only need to enter the required data and letters can be immediately created for community service purposes. using React and Express."
+      "balaroa": "During my internship (KKLP) at the Balaroa District Office, I created a product, namely an application for creating automatic letters, so that employees only need to enter the required data and letters can be immediately created for community service purposes."
     },
     "now": "now",
     "tools": "My Tools & Skills"
