--- a/src/translations/id.json
+++ b/src/translations/id.json
@@ -31,7 +31,7 @@
       "head": "pengalaman",
       "paerte_code": "Sebagai UI/UX Designer yang berfokus pada pembuatan desain prototipe aplikasi untuk pengembangan lebih lanjut. Dengan memahami kebutuhan pengguna, saya berusaha untuk membuat desain yang sederhana dan efektif. Alat yang saya gunakan adalah Figma.",
       "balaroa_head": "Kelurahan Balaroa",
-      "balaroa": "Membuat aplikasi untuk membuat surat otomatis, sehingga pegawai hanya perlu memasukkan data yang dibutuhkan dan surat dapat segera dibuat untuk keperluan pelayanan masyarakat. menggunakan React dan Express."
+      "balaroa": "Selama magang (KKLP) di Kantor Kelurahan Balaroa, saya membuat suatu product yaitu berupa aplikasi untuk membuat surat otomatis, sehingga pegawai hanya perlu memasukkan data yang dibutuhkan dan surat dapat segera dibuat untuk keperluan pelayanan masyarakat."
     },
     "now": "sekarang",
     "tools": "Alat & Keterampilan Saya"
